--- a/ivy.xml
+++ b/ivy.xml
@@ -1,12 +1,13 @@
 <!DOCTYPE ivy-module>
 
 <ivy-module version="2.0">
-    <info organisation="net.henrylawson.firstspringmvc" module="FirstSpringMVC"/>
+    <info organisation="net.henrylawson.firstspringmvc" module="Springy"/>
     <configurations>
         <conf name="binaries" description="Binary jars"/>
     </configurations>
     <dependencies>
     	<dependency org="org.springframework" name="spring-webmvc" rev="3.2.0.RELEASE"/>
     	<dependency org="javax.validation" name="validation-api" rev="1.0.0.GA"/>
+    	<dependency org="org.hibernate" name="hibernate-validator" rev="4.3.1.Final"/>
     </dependencies>
 </ivy-module>
