Cleaning up tomcat tasks so that they have explicit dependencies

--- a/build.xml
+++ b/build.xml
@@ -115,15 +115,15 @@
         <classpath refid="catalina-ant-classpath"/>
     </taskdef>
 
-    <target name="install" description="Install application in Tomcat">
+    <target name="install" depends="deploywar" description="Install application in Tomcat">
         <install url="${tomcat.manager.url}"
                  username="${tomcat.manager.username}"
                  password="${tomcat.manager.password}"
                  path="/${name}"
-                 war="${name}"/>
+                 war="${name}.war"/>
     </target>
 
-    <target name="reload" description="Reload application in Tomcat">
+    <target name="reload" depends="deploy" description="Reload application in Tomcat">
         <reload url="${tomcat.manager.url}"
                  username="${tomcat.manager.username}"
                  password="${tomcat.manager.password}"
